--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -564,9 +564,10 @@
 	<!-- datalab 컨텐츠 새로고침 버튼 영역 -->
 	<div class="row dl_refresh_buttonBox py-3 me-0">
 		<div class="col mt-4">
-			<div class="dl_refresh_button mx-auto hstack">
+			<!-- 오늘의 피드 추천 -->
+			<!-- <div class="dl_refresh_button mx-auto hstack">
 				<img class="img-fluid" src="../img/home/main/btn_curation_refresh.png" alt="#"><span>오늘의 피드 추천</span><span>오늘의 핫플 추천</span><span>코스 재추천</span>
-			</div>
+			</div> -->
 			<div class="dl_more_content hstack">
 				<a href="/feed" class="hstack goFeed me-2 f14">바로가기 <b> > </b></a>
 				<a href="/info" class="hstack goEvent me-2 f14">바로가기 <b> > </b></a>
