24-03-07 | 장창엽 | DB isnert 작업

--- a/src/main/resources/templates/thymeleaf/map/map_0221.html
+++ b/src/main/resources/templates/thymeleaf/map/map_0221.html
@@ -7,7 +7,7 @@
 <div th:replace="~{nav/nav::nav}"></div>
     <div class="map_wrapp">
         <!-- 맵 컨텐츠 전체를 감싸는 영역  -->
-        <div class="map_all_contentBox">
+        <div class="map_all_contentListBox">
         
             <!-- map 왼쪽 가이드 영역 -->
             <div class="map_guide py-3">
