--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -5,12 +5,19 @@
 
 
 /* 맵 컨텐츠 전체를 감싸는 영역 스타일 */
-div.map_all_contentBox {
+div.map_all_contentListBox {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-
+	
 }
+div.map_all_contentBox {
+    width: 100%;
+    display: flex;
+    height: 100vh;
+    flex-direction: row;
+}
+
 /* map guide 영역 */
 div.map_guide {
 	width: 400px;
