--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -5,11 +5,17 @@
 
 
 /* 맵 컨텐츠 전체를 감싸는 영역 스타일 */
+div.map_all_contentListBox {
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   
+}
 div.map_all_contentBox {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-
+	height: 100vh;
 }
 /* map guide 영역 */
 div.map_guide {
@@ -309,9 +315,7 @@ li.map_icon_set.on::before {
 
 /* 맵 출력 아이템 리스트 스타일 */
 div.mapListItemBox{
-	overflow : scroll !important;
-	height: calc( 100vh - 150px );
-	width: 400px;
+   height: calc( 100vh - 150px );
 }
 
 /* 카카오 맵 스타일 */
@@ -429,9 +433,9 @@ h3.pgj{
   .showbtn {
     display: block;
   }
-  div.map_guide{
+   div.map_guide{
 	width: 100%;  
-  }
+  } 
  .mapday1,.mapday2,.mapday3{
  	display: none;
  }
