--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -306,9 +306,8 @@ div.hp_img_content {
 	margin-bottom: 60px;
 }
 
-img.hp_img {
-	width: 100%;
-	height: 100%;
+.hp_img_content img{
+	object-fit: cover;
 }
 
 /*핫플콕콕 이미지 박스 안 텍스트 title 스타일*/
