--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -34,7 +34,7 @@
 									<!-- session Id와 글쓴이가 일치할 때는 수정버튼 활성화 -->
 									<a th:if="${session.Member_Id == feedList.getMember_Id()}" th:href="@{'/feed_update?num='+${feedList.getFeed_num()}}" class="btn btn-sm btn-dark me-2">수정</a>
 										<!-- 다른 사람이 볼 때는 공유 -->
-									<a th:unless="${session.Member_Id == feedList.getMember_Id()}" href="#" class="p-2"><i class="fi fi-br-paper-plane d-flex align-items-center"></i></a>
+									<!-- <a th:unless="${session.Member_Id == feedList.getMember_Id()}" href="#" class="p-2"><i class="fi fi-br-paper-plane d-flex align-items-center"></i></a> -->
 										<!-- 수정 및 삭제 버튼  -->
 										<div th:if="${session.Member_Id==feedList.Member_Id or session.Member_Id=='admin'}">
 											<div class="f17 hstack" id="feed-right">
