--- a/src/main/resources/templates/thymeleaf/info/infoCourse.html
+++ b/src/main/resources/templates/thymeleaf/info/infoCourse.html
@@ -1,83 +1,116 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<div th:replace="~{head/head::head}">
-</div>
+<div th:replace="~{head/head::head}"></div>
 <body>
-<div th:replace="~{nav/nav::nav}">
-</div>
-<div th:replace="~{alert/toast::div}">
-</div>
-<div id="info" class="container-fluid mt-4 mb-3">
-	<div class="container px-4 px-sm-5 pt-4">
-		<div class="row">
-			<div class="col-10 col-lg-7 mx-auto">
-				<h3 class="text-bold">
-				# 전체 </h3>
-			</div>
-		</div>
-		<!--board-->
-		<!-- 피드목록이 비어있을 때 -->
-		<th:block th:if="${getCount}==0">
+   <div th:replace="~{nav/nav::nav}"></div>
+   <div th:replace="~{alert/toast::div}"></div>
+   <div id="info" class="container-fluid mt-4 mb-3 ">
+      <div class="container px-4 px-sm-5 pt-4">
+         <div class="row">
+            <div class="col-10 col-lg-7 mx-auto">
+               <h3 class="text-bold">
+                  # 전체
+               </h3>
+            </div>
+         </div>
+         <!--board-->
+         <!-- 피드목록이 비어있을 때 -->
+         <th:block th:if="${getCount} == 0">
 		<div th:if="${#lists.isEmpty(feedList)}">
 			<div class="row">
 				<div class="col text-center py-5 my-5">
-					<img src="../img/feed/out-of-stock.png" class="mb-4" width="100" height="100" alt=""/><span class="h5 text-muted d-block">현재 <span th:if="${not #strings.isEmpty(feed_theme)}" th:text="${feed_theme}"></span><span th:if="${feed_area}!=null" th:text="${feed_area}">feed_area</span> 코스 목록이 비어있어요 </span><span class="text-muted"><span class="d-inline-block text-muted" th:text="|${session.Member_Name}님이|" th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span><br/>
-					<a href="/aicc" class="m-auto text-center btn btn-main my-4 p-2 px-5 f14"> 코스 담으러 가기 </a>
+					<img src="../img/feed/out-of-stock.png" class="mb-4" width="100"
+						height="100" alt="" /> <span class="h5 text-muted">현재 <span
+						th:if="${not #strings.isEmpty(feed_theme)}"
+						th:text="${feed_theme}"></span> <span th:if="${feed_area}!=null"
+						th:text="${feed_area}">feed_area</span> 코스 목록이 비어있어요
+					</span> <span class="text-muted"><span
+						class="d-inline-block text-muted"
+						th:text="|${session.Member_Name}님이|"
+						th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span> <br />
+						<a
+						href="/aicc"
+						class="m-auto text-center btn btn-main my-4 p-2 px-5 f14"> 코스 담으러 가기 </a>
 				</div>
 			</div>
 		</div>
 		</th:block>
-		<th:block th:if="${getCount} !=0">
-		<div class="row gap-4">
-			<div class="col-10 col-lg-7 mx-auto order-2">
-				<hr>
-				<div class="row">
-					<div class="col">
-						 총 <span class="blue-text text-bold" th:text="${getCount}"></span>건
-					</div>
-					<div class="col-12 col-md-7 text-end mt-2 mt-md-0">
-						<!-- <span class="active">최신순</span> <span>거리순</span> <span>인기순</span> -->
-					</div>
-				</div>
-				<hr>
-				<div class="board row">
-					<!--board-->
-					<div class="row evendiv" th:each="list:${list}">
-						<a th:href="@{'Course_view?num='+ ${list.getCourse_num()}}" class="row">
-						<div class="col-3 board-left text-center">
-							<img th:src="@{'../img/info/' + ${list.getCourse_img()}}" class="img-fluid rounded-4" alt="" style="width: 80px; height: 80px;">
-						</div>
-						<div class="col">
-							<div class="row">
-								<div class="col ">
-									<h5 style="line-height: 80px;">
-									[<span th:text="${list.getMember_Id()}"></span>] 의 <span th:text="|${list.getCourse_Name()} 코스|"></span>
-									</h5>
-								</div>
-							</div>
-						</div>
-						</a>
-						<hr class="mt-3 ms-3">
-					</div>
-					<!--------->
-				</div>
-				<!-- 페이징 -->
-				<div class="pagination ">
-					<ul class="d-flex">
-						<!-- 이전 버튼 -->
-						<li th:if="${currentPage> 1}" class="mx-2"><a th:href="@{'/infoCourse?page=' + ${mPage}}">&laquo; 이전</a></li>
-						<!-- 페이지 번호 -->
-						<li th:each="pageNum : ${#numbers.sequence((currentpage - 4> 0 ? currentPage - 4 : 1), (currentPage + 4 < totalpages ? currentpage + 4 : totalpages))}" class="mx-2"><a th:href="@{'/infoCourse?page=' + ${pageNum}}" th:text="${pageNum}" th:class="${currentPage==pageNum} ? 'current-page' : ''"></a>
-						</li>
-						<!-- 다음 버튼 -->
-						<li th:if="${currentPage < totalPages}" class="mx-2"><a th:href="@{'/infoCourse?page=' + ${pPage}}">다음 &raquo;</a></li>
-					</ul>
-				</div>
-				<div class="fixed-bottom ">
-					<img src="../img/aicc/img_robot1.png" alt="" class="d-block ms-auto robot m-4 ">
-				</div>
-				<!------------우측 (필터)------------->
-				<!-- <div
+		<th:block th:if="${getCount} != 0">
+         <div class="row gap-4">
+            <div class="col-10 col-lg-7 mx-auto order-2">
+               <hr>
+               <div class="row">
+                  <div class="col">
+                     총 <span class="blue-text text-bold" th:text="${getCount}"></span>건
+                  </div>
+                  <div class="col-12 col-md-7 text-end mt-2 mt-md-0">
+                     <!-- <span class="active">최신순</span> <span>거리순</span> <span>인기순</span> -->
+                  </div>
+               </div>
+               <hr>
+               <div class="board row">
+                  <!--board-->
+                  <div class="row evendiv" th:each="list:${list}">
+                     <a th:href="@{'Course_view?num='+ ${list.getCourse_num()}}"
+                        class="row">
+                        <div class="col-3 board-left text-center">
+                           <img th:src="@{'../img/info/' + ${list.getCourse_img()}}"
+                              class="img-fluid rounded-4" alt=""
+                              style="width: 80px; height: 80px;">
+                        </div>
+                        <div class="col">
+                           <div class="row">
+                              <div class="col ">
+                                 <h5 style="line-height: 80px;">
+                                    [<span th:text="${list.getMember_Id()}"></span>] 의 <span
+                                       th:text="|${list.getCourse_Name()} 코스|"> </span>
+                                 </h5>
+                              </div>
+                           </div>
+                           
+                        </div>
+                     </a>
+                     <hr class="mt-3 ms-3">
+                  </div>
+                  <!--------->
+
+               </div>
+               
+               <!-- 페이징 -->
+               <div class="pagination "   >
+                  <ul class="d-flex">
+                     <!-- 이전 버튼 -->
+                     <li th:if="${currentPage > 1}" class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${mPage}}">&laquo;
+                           이전</a></li>
+
+                     <!-- 페이지 번호 -->
+                     <li
+                        th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
+                        (currentPage + 4 < totalPages ? currentPage + 4 : totalPages))}"
+                        class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${pageNum}}"
+                        th:text="${pageNum}"
+                        th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
+                     </li>
+
+                     <!-- 다음 버튼 -->
+                     <li th:if="${currentPage < totalPages}" class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${pPage}}">다음
+                           &raquo;</a></li>
+                  </ul>
+               </div>
+                        
+               <div class="fixed-bottom " style="z-index:-1;">
+               
+                  <img src="../img/aicc/img_robot1.png" alt=""
+                        class="d-block ms-auto robot m-4 ">
+                        
+               </div>
+               
+               
+            <!------------우측 (필터)------------->
+            <!-- <div
                class="sticky-top h-100 p-4 info-filter-sticky-top
                col order-1 order-lg-2 border mt-3 p-2 ms-md-2 px-md-4 order-1 rounded-4">
                새로고침 버튼
@@ -104,28 +137,31 @@
                   </div>
                </div>
             </div> -->
-			</div>
-		</div>
-		<div class="text-end m-4 z-5 position-relative">
-			<a href="aicc" class="text-black ms-auto btn btn-main">여행 코스짜러가기</a>
-		</div>
-		</th:block>
-	</div>
+         </div>
+         
+         
+      </div>
+         <div class="text-end m-4 z-5 position-relative">
+                           <a href="aicc"class="text-black ms-auto btn btn-main" >여행 코스짜러가기</a>
+         </div>
+         </th:block>
+   </div>
 </div>
-<div th:replace="~{footer/footer::footer}">
-</div>
-<script type="text/javascript">
+   <div th:replace="~{footer/footer::footer}"></div>
+   <script type="text/javascript">
         $(document).ready(function() {
             // URL에서 msg 매개변수 가져오기
             const urlParams = new URLSearchParams(window.location.search);
             const msg = urlParams.get('msg');
             const name = urlParams.get('name');
+            
          // 메시지가 존재할 경우 toast로 표시
             if (msg !== null && msg !== "") {
                 let message;
                 if(msg == 1){
                     message = "글작성을 완료하였습니다. 🖐";
                 }
+                
                 // 부트스트랩 toast 트리거
                 $('.my-toast-body').text(message);
                 $('.my-toast').toast('show');
